--- a/WorkSocket/client.html
+++ b/WorkSocket/client.html
@@ -46,7 +46,7 @@
                 display: block; 
                 width: 500px; 
                 height: 400px; 
-                background-image: url('back.jpg');
+                background-image: url('back(2).jpg');
                 border: 1px #000 solid
             }
             .message{
@@ -79,7 +79,7 @@
         <div class="template-message" style="display:none">
             <div class="message"></div>
         </div>
-        <script src="../sign/js/jquery.js"></script>
+        <script src="./workerman/js/jquery.js"></script>
         <script>
 //            提示用户输入昵称
             var nickname = prompt('请输入一个华丽的昵称');
